k8s/driverservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driverservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driverservice
  template:
    metadata:
      labels:
        app: driverservice
    spec:
      containers:
      - name: driverservice
        image: acruithuykhoigo.azurecr.io/driverservice:latest # CI/CD sẽ thay
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: driverservice # Service nội bộ
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: driverservice
