k8s/locationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locationservice
  labels:
    app: locationservice
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locationservice
  template:
    metadata:
      labels:
        app: locationservice
        tier: backend
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/skip-outbound-ports: "6379,6380,443,80"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: locationservice
        image: acruithuykhoigo.azurecr.io/locationservice:c3c83b6938314ea6442db7435ee576ba05ab0b82
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: locationservice # Service nội bộ
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: locationservice
