k8s/tripservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripservice
  labels:
    app: tripservice
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripservice
  template:
    metadata:
      labels:
        app: tripservice
        tier: backend
      annotations:
        linkerd.io/inject: disabled
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: tripservice
        image: acruithuykhoigo.azurecr.io/tripservice:3bb38e338d1b4610534b61d71562d142051c51a6
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: tripservice # Service nội bộ
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: tripservice
