k8s/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
        tier: backend
      annotations:
        linkerd.io/inject: enabled
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: userservice
        image: acruithuykhoigo.azurecr.io/userservice:latest # CI/CD sẽ thay
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  type: ClusterIP # Service này sẽ có IP nội bộ để truy cập từ các Pod khác
  ports:
  - port: 80 # Cổng public
    targetPort: 8000 # Cổng container
  selector:
    app: userservice
